cbits/Bullet.h

void btSoftBody_Config_m_dsequence_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btSoftBody::ePSolver::_> btSoftBody_Config->m_dsequence
void* btSoftBody_Config_m_dsequence_get(void *c); //attribute: ::btAlignedObjectArray<btSoftBody::ePSolver::_> btSoftBody_Config->m_dsequence
void* btSoftBody_Element_new(); //constructor: Element  ( ::btSoftBody::Element::* )(  ) 
void btSoftBody_Element_free(void *c);
 
void btSoftBody_Element_m_tag_set(void *c,void* a); //attribute: void * btSoftBody_Element->m_tag
void* btSoftBody_Element_m_tag_get(void *c); //attribute: void * btSoftBody_Element->m_tag
void* btSoftBody_Face_new(); //constructor: Face  ( ::btSoftBody::Face::* )(  ) 
void btSoftBody_Face_free(void *c);
 
// attribute not supported: //attribute: ::btSoftBody::Node *[3] btSoftBody_Face->m_n
void btSoftBody_Face_m_normal_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Face->m_normal
void btSoftBody_Face_m_normal_get(void *c,float* a);
void btSoftBody_Face_m_ra_set(void *c,float a); //attribute: ::btScalar btSoftBody_Face->m_ra
float btSoftBody_Face_m_ra_get(void *c); //attribute: ::btScalar btSoftBody_Face->m_ra
void btSoftBody_Face_m_leaf_set(void *c,void* a); //attribute: ::btDbvtNode * btSoftBody_Face->m_leaf
void* btSoftBody_Face_m_leaf_get(void *c); //attribute: ::btDbvtNode * btSoftBody_Face->m_leaf
void* btSoftBody_Feature_new(); //constructor: Feature  ( ::btSoftBody::Feature::* )(  ) 
void btSoftBody_Feature_free(void *c);
 
void btSoftBody_Feature_m_material_set(void *c,void* a); //attribute: ::btSoftBody::Material * btSoftBody_Feature->m_material
void* btSoftBody_Feature_m_material_get(void *c); //attribute: ::btSoftBody::Material * btSoftBody_Feature->m_material
void* btSoftBody_AJoint_IControl_new(); //constructor: IControl  ( ::btSoftBody::AJoint::IControl::* )(  ) 
void btSoftBody_AJoint_IControl_free(void *c);
 
void* btSoftBody_AJoint_IControl_Default(); //method: Default ::btSoftBody::AJoint::IControl * (*)(  )
float btSoftBody_AJoint_IControl_Speed(void *c,void* p0,float p1); //method: Speed ::btScalar ( ::btSoftBody::AJoint::IControl::* )( ::btSoftBody::AJoint *,::btScalar ) 
void btSoftBody_AJoint_IControl_Prepare(void *c,void* p0); //method: Prepare void ( ::btSoftBody::AJoint::IControl::* )( ::btSoftBody::AJoint * ) 
float btSoftBody_ImplicitFn_Eval(void *c,float* p0); //method: Eval ::btScalar ( ::btSoftBody::ImplicitFn::* )( ::btVector3 const & ) 
void* btSoftBody_Impulse_new(); //constructor: Impulse  ( ::btSoftBody::Impulse::* )(  ) 
void btSoftBody_Impulse_free(void *c);
 
void btSoftBody_Impulse_m_asDrift_set(void *c,int a); //attribute: int btSoftBody_Impulse->m_asDrift
int btSoftBody_Impulse_m_asDrift_get(void *c); //attribute: int btSoftBody_Impulse->m_asDrift
void btSoftBody_Impulse_m_asVelocity_set(void *c,int a); //attribute: int btSoftBody_Impulse->m_asVelocity
int btSoftBody_Impulse_m_asVelocity_get(void *c); //attribute: int btSoftBody_Impulse->m_asVelocity
void btSoftBody_Impulse_m_drift_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Impulse->m_drift
void btSoftBody_Impulse_m_drift_get(void *c,float* a);
void btSoftBody_Impulse_m_velocity_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Impulse->m_velocity
void btSoftBody_Impulse_m_velocity_get(void *c,float* a);
void btSoftBody_Joint_Terminate(void *c,float p0); //method: Terminate void ( ::btSoftBody::Joint::* )( ::btScalar ) 
//not supported method: Type ::btSoftBody::Joint::eType::_ ( ::btSoftBody::Joint::* )(  ) const
// error:  - unsupported

void btSoftBody_Joint_Solve(void *c,float p0,float p1); //method: Solve void ( ::btSoftBody::Joint::* )( ::btScalar,::btScalar ) 